@@ -625,6 +625,8 @@ $pgv_lang["find_specialchar"]		= "Find Special Characters";
 $pgv_lang["magnify"]				= "Magnify";
 $pgv_lang["skip_surnames"]			= "Skip Surname lists";
 $pgv_lang["show_surnames"]			= "Show Surname lists";
+$pgv_lang["skip_marnms"]			= "Exclude married names";
+$pgv_lang["show_marnms"]			= "Include married names";
 $pgv_lang["all"]					= "ALL";
 $pgv_lang["hidden"]					= "Hidden";
 $pgv_lang["confidential"]			= "Confidential";
