@@ -10,6 +10,7 @@
 
 
 Version 4.2.0
+ - Added: Option to include/exclude married names on indi/fam lists
  - Fixed: [ 2391188 ] Tree Tab Error (fisharebest)
  - Added: Load welcome page blocks in parallel using ajax
  - Added: Load indi page tabs in parallel using ajax
